fixed overlap if d3 body copy was missing on mobile

--- a/src/packages/modules/primary-tout-p1-d7/css/_responsive-primary-tout-p1-d7.scss
+++ b/src/packages/modules/primary-tout-p1-d7/css/_responsive-primary-tout-p1-d7.scss
@@ -222,7 +222,7 @@ $tabletMax: px-em(979);
           vertical-align:top;
         }
         .box{
-          padding:18px 20px 1px 20px;
+          padding:18px 20px 16px 20px;
           .p3{
             margin-bottom:15px;
           }
@@ -234,7 +234,7 @@ $tabletMax: px-em(979);
           vertical-align:bottom;
         }
         .box{
-          padding:18px 20px 44px 20px;
+          padding:18px 20px 66px 20px;
         }
       }
 
